--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,15 +8,17 @@
     <title>Document</title>
     <link rel="shortcut icon" href="https://placekitten.com/96/139" type="image/x-icon">
 </head>
+
 <body>
     <header>
-        <h1>Team Template</h1>
+        <h1>Landing</h1>
     </header>
     <main>
-
+        <img src="img/itachi.jpg" alt="itachi black background">
     </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
