--- a/index.html
+++ b/index.html
@@ -11,10 +11,28 @@
 
 <body>
     <header>
-        <h1>Landing</h1>
+        
+        <nav>
+            <img src="img/figma-logo.png" alt="figma-logo" width="80" height="50">
+            <ul>
+                <li>Home</li>
+                <li>Product</li>
+                <li>Prising</li>
+                <li>About</li>
+                <li>Contacts</li>
+            </ul>
+        </nav>
+        <img src="img/twitericon.png" alt="twitericon" width="23" height="23">
+        <img src="img/значок instagram.jpg" alt="instagram" width="30" height="30">
+        <img src="img/facebook.jpg" alt="facebookicon" width="30" height="30">
+        <h1>The best products start with Figma</h1>
+        <p>Most calendars are designed for teams. Slate is designed for freelancers</p>
+        <button>Try For Free</button>
     </header>
     <main>
-        <img src="img/itachi.jpg" alt="itachi black background">
+        <h2>Features</h2>
+        <h4></h4>
+    
     </main>
     <footer>
 
