resolve instagram name issue

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </ul>
         </nav>
         <img src="img/twitericon.png" alt="twitericon" width="23" height="23">
-        <img src="img/значок instagram.jpg" alt="instagram" width="30" height="30">
+        <img src="img/instagram.jpg" alt="instagram" width="30" height="30">
         <img src="img/facebook.jpg" alt="facebookicon" width="30" height="30">
         <h1>The best products start with Figma</h1>
         <p>Most calendars are designed for teams. Slate is designed for freelancers</p>
