Add section 5 sections 5th not whole

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 
 <body>
     <header>
-        
+
         <nav>
-            <img src="img/figma-logo.png" alt="figma-logo" width="80" height="50">
+            <img src="img/figma-logo.png" alt="figma-logo" class="logo" width="80" height="50">
             <ul>
-                <li>Home</li>
-                <li>Product</li>
-                <li>Prising</li>
-                <li>About</li>
-                <li>Contacts</li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Product</a></li>
+                <li><a href="#">Prising</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contacts</a></li>
             </ul>
         </nav>
         <img src="img/twitericon.png" alt="twitericon" width="23" height="23">
@@ -30,9 +30,39 @@
         <button>Try For Free</button>
     </header>
     <main>
-        <h2>Features</h2>
-        <h4></h4>
-    
+        <section>
+            <h2>Features</h2>
+            <p>Most calendars are designed for teams.<br> Slate is designed for freelancers</p>
+            <h4>OpenType features<br>Variable fonts</h4>
+            <p>Slate helps you see how many more days you need nto work to reach your financial goal.</p>
+            <h4>Design with real data</h4>
+            <p>Slate helps you see how many more days you need to work to reach your financial goal.</p>
+            <h4>Fastest way to take action</h4>
+            <p>Slate helps you see how many more days you need to work to reach your financial goal.</p>
+            <video src="video/ducks.mp4" width="400" height="300" controls></video>
+        </section>
+        <section>
+            <h2>Fastest way to organize</h2>
+            <p>Most calendars are designed for teams.<br>Slate is designed for freelancers</p>
+            <button type="submit">Try For Free</button>
+            <img src="img/laptop.jpg" alt="laptop" width="200" height="100">
+        </section>
+        <section>
+            <h5>At your fingertips</h5>
+            <h2>Lighting fast prototyping</h2>
+            <p><b>Subscribe to our Newsletter<br>Available exclusivery on Fignaland</p>
+            <input type="text" name="Email" placeholder="Your Email">
+            <button type="submit">Subscribe</button>    
+        </section>
+        <section>
+            <h2>Partners</h2>
+            <p>Most calendars are designed for teams.<br>Slate is designed for freelancers</p>
+            <button>Try For Free</button>
+        </section>
+        <section>
+            <h2>Testimonials</h2>
+            <p>Most calendars are designed for teams.Slate is designed for freelancers<br> who want a simple way to plan their schelude.</p>
+        </section>
     </main>
     <footer>
 
