Change at 53 line <b>

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <section>
             <h5>At your fingertips</h5>
             <h2>Lighting fast prototyping</h2>
-            <p><b>Subscribe to our Newsletter<br>Available exclusivery on Fignaland</p>
+            <p><b>Subscribe to our Newsletter</b><br>Available exclusivery on Fignaland</p>
             <input type="text" name="Email" placeholder="Your Email">
             <button type="submit">Subscribe</button>    
         </section>
