add Partners, add links for icons in header, add Testimonials, add part of Prising, add Contact us, add part of footer

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 <li><a href="#">Contacts</a></li>
             </ul>
         </nav>
-        <img src="img/twitericon.png" alt="twitericon" width="23" height="23">
-        <img src="img/instagram.jpg" alt="instagram" width="30" height="30">
-        <img src="img/facebook.jpg" alt="facebookicon" width="30" height="30">
+        <a href="#"><img src="img/twitericon.png" alt="twitericon" width="23" height="23"></a>
+        <a href="#"><img src="img/instagram.jpg" alt="instagram" width="30" height="30"></a>
+        <a href="#"><img src="img/facebook.jpg" alt="facebookicon" width="30" height="30"></a>
         <h1>The best products start with Figma</h1>
         <p>Most calendars are designed for teams. Slate is designed for freelancers</p>
         <button>Try For Free</button>
@@ -52,20 +52,60 @@
             <h2>Lighting fast prototyping</h2>
             <p><b>Subscribe to our Newsletter</b><br>Available exclusivery on Fignaland</p>
             <input type="text" name="Email" placeholder="Your Email">
-            <button type="submit">Subscribe</button>    
+            <button type="submit">Subscribe</button>
         </section>
         <section>
             <h2>Partners</h2>
             <p>Most calendars are designed for teams.<br>Slate is designed for freelancers</p>
+            <a href="#"><img src="img/partneramazon.png" alt="partneramazon"></a>
+            <a href="#"><img src="img/partnerGoogle.png" alt="partnerGoogle"></a>
+            <a href="#"><img src="img/partnerMicrosoft.png" alt="partnerMicrosoft"></a>
+            <a href="#"><img src="img/partnerUber.png" alt="partnerUber"></a>
+            <a href="#"><img src="img/prtnerDropbox.png" alt="partnerDropbox"></a>
+            <a href="#"><img src="img/partneramazon.png" alt="partneramazon"></a>
+            <a href="#"><img src="img/partnerGoogle.png" alt="partnerGoogle"></a>
+            <a href="#"><img src="img/partnerMicrosoft.png" alt="partnerMicrosoft"></a>
+            <a href="#"><img src="img/partnerUber.png" alt="partnerUber"></a>
+            <a href="#"><img src="img/prtnerDropbox.png" alt="partnerDropbox"></a>
             <button>Try For Free</button>
         </section>
         <section>
             <h2>Testimonials</h2>
-            <p>Most calendars are designed for teams.Slate is designed for freelancers<br> who want a simple way to plan their schelude.</p>
+            <p>Most calendars are designed for teams.Slate is designed for freelancers<br> who want a simple way to plan
+                their schelude.</p>
+            <img src="img/ibm.png" alt="ibm">
+            <button>More Testimonials</button>
+        </section>
+        <section>
+            <h2>Prising</h2>
+            <p>Most calendars are designed for teams.<br>Slate is designed for freelancers</p>
+            <h4>Free</h4>
+            <p>organize across all apps by hand</p>
+            <button>Order now</button>
+            <h4>Standart</h4>
+            <p>organize across all apps by hand</p>
+            <button>Order now</button>
+            <h4>Business</h4>
+            <p>organize across all apps by hand</p>
+            <button>Order now</button>
+        </section>
+        <section>
+            <h2>Contact Us</h2>
+            <p>Most calendars are designed for teams.<br>Slate is designed for freelancers</p>
+            <h4>Contact Us</h4>
+            <form method="post">
+                <input type="text" placeholder="Your Name">
+                <input type="text" placeholder="Your Email">
+                <input type="text" placeholder="Your Messege">
+                <button>Send</button>
+            </form>
+            <img src="img/mapscreen.png" alt="mapscreen">
         </section>
     </main>
     <footer>
-
+        <h4>Pages</h4>
+        <h4>Tomothy</h4>
+        <h4>Jane Black</h4>
     </footer>
 </body>
 
