add img in Features and figured some img

--- a/index.html
+++ b/index.html
@@ -33,12 +33,21 @@
         <section>
             <h2>Features</h2>
             <p>Most calendars are designed for teams.<br> Slate is designed for freelancers</p>
-            <h4>OpenType features<br>Variable fonts</h4>
-            <p>Slate helps you see how many more days you need nto work to reach your financial goal.</p>
-            <h4>Design with real data</h4>
-            <p>Slate helps you see how many more days you need to work to reach your financial goal.</p>
-            <h4>Fastest way to take action</h4>
-            <p>Slate helps you see how many more days you need to work to reach your financial goal.</p>
+            <figure>
+                <img src="img/circle.png" alt="circleAndRect">
+                <h4>OpenType features<br>Variable fonts</h4>
+                <p>Slate helps you see how many more days you need nto work to reach your financial goal.</p>
+            </figure>
+            <figure>
+                <img src="img/draw.png" alt="draw">
+                <h4>Design with real data</h4>
+                <p>Slate helps you see how many more days you need to work to reach your financial goal.</p>
+            </figure>
+            <figure>
+                <img src="img/pnsel.png" alt="pensel">
+                <h4>Fastest way to take action</h4>
+                <p>Slate helps you see how many more days you need to work to reach your financial goal.</p>
+            </figure>
             <video src="video/ducks.mp4" width="400" height="300" controls></video>
         </section>
         <section>
@@ -73,8 +82,10 @@
             <h2>Testimonials</h2>
             <p>Most calendars are designed for teams.Slate is designed for freelancers<br> who want a simple way to plan
                 their schelude.</p>
-            <img src="img/ibm.png" alt="ibm">
-            <button>More Testimonials</button>
+            <figure>
+                <img src="img/ibm.png" alt="ibm">
+                <button>More Testimonials</button>
+            </figure>
         </section>
         <section>
             <h2>Prising</h2>
