Add some details

--- a/index.html
+++ b/index.html
@@ -60,8 +60,11 @@
             <h5>At your fingertips</h5>
             <h2>Lighting fast prototyping</h2>
             <p><b>Subscribe to our Newsletter</b><br>Available exclusivery on Fignaland</p>
-            <input type="text" name="Email" placeholder="Your Email">
-            <button type="submit">Subscribe</button>
+            <img src="img/screencontent.png" alt="screencontent">
+            <label>
+                <input type="text" name="Email" placeholder="Your Email">
+                <button type="submit">Subscribe</button>
+            </label>    
         </section>
         <section>
             <h2>Partners</h2>
@@ -90,24 +93,51 @@
         <section>
             <h2>Prising</h2>
             <p>Most calendars are designed for teams.<br>Slate is designed for freelancers</p>
-            <h4>Free</h4>
-            <p>organize across all apps by hand</p>
-            <button>Order now</button>
-            <h4>Standart</h4>
-            <p>organize across all apps by hand</p>
-            <button>Order now</button>
-            <h4>Business</h4>
-            <p>organize across all apps by hand</p>
-            <button>Order now</button>
+            <figure>
+                <h4>Free</h4>
+                <p>organize across all apps by hand</p>
+                <h3>0$</h3>
+                <p>Per Month</p>
+                <a href="#"><p>Prising feature</p></a>
+                <a href="#"><p>Prising feature</p></a>
+                <a href="#"><p>Prising feature</p></a>
+                <a href="#"><p>Prising feature</p></a>
+                <a href="#"><p>Prising feature</p></a>
+                <button>Order now</button>
+            </figure>
+            <figure>
+                <h4>Standart</h4>
+                <p>organize across all apps by hand</p>
+                <h3>10$</h3>
+                <p>Per Month</p>
+                <a href="#"><p>Prising feature</p></a>
+                <a href="#"><p>Prising feature</p></a>
+                <a href="#"><p>Prising feature</p></a>
+                <a href="#"><p>Prising feature</p></a>
+                <a href="#"><p>Prising feature</p></a>
+                <button>Order now</button>
+            </figure>
+            <figure>
+                <h4>Business</h4>
+                <p>organize across all apps by hand</p>
+                <h3>99$</h3>
+                <p>Per Month</p>
+                <a href="#"><p>Prising feature</p></a>
+                <a href="#"><p>Prising feature</p></a>
+                <a href="#"><p>Prising feature</p></a>
+                <a href="#"><p>Prising feature</p></a>
+                <a href="#"><p>Prising feature</p></a>
+                <button>Order now</button>
+            </figure>
         </section>
         <section>
             <h2>Contact Us</h2>
             <p>Most calendars are designed for teams.<br>Slate is designed for freelancers</p>
             <h4>Contact Us</h4>
             <form method="post">
-                <input type="text" placeholder="Your Name">
-                <input type="text" placeholder="Your Email">
-                <input type="text" placeholder="Your Messege">
+                <input type="text" placeholder="Your Name"><br>
+                <input type="text" placeholder="Your Email"><br>
+                <input type="text" placeholder="Your Messege"><br>
                 <button>Send</button>
             </form>
             <img src="img/mapscreen.png" alt="mapscreen">
@@ -115,8 +145,17 @@
     </main>
     <footer>
         <h4>Pages</h4>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Product</a></li>
+            <li><a href="#">Prising</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contacts</a></li>
+        </ul>
         <h4>Tomothy</h4>
         <h4>Jane Black</h4>
+        <p>7480 Mockingbird Hill undefined</p>
+        <p>(239) 555-0108</p>
     </footer>
 </body>
 
