add some classes and change tag labale to div

--- a/index.html
+++ b/index.html
@@ -22,49 +22,51 @@
                 <li><a href="#">Contacts</a></li>
             </ul>
         </nav>
-        <a href="#"><img src="img/twitericon.png" alt="twitericon" width="23" height="23"></a>
-        <a href="#"><img src="img/instagram.jpg" alt="instagram" width="30" height="30"></a>
-        <a href="#"><img src="img/facebook.jpg" alt="facebookicon" width="30" height="30"></a>
-        <h1>The best products start with Figma</h1>
-        <p>Most calendars are designed for teams. Slate is designed for freelancers</p>
+        <div class="icons"><a href="#">
+            <img class="twiticon" src="img/twitweswg.svg" alt="twitericon" width="23" height="23"></a>
+            <a href="#"><img class="instagramicon" src="img/instagramsvg.svg" alt="instagram" width="30" height="30"></a>
+            <a href="#"><img class="facebookicon" src="img/facbooksvg.svg" alt="facebookicon" width="30" height="30"></a>
+        </div>
+        <h1 class="title">The best products start with Figma</h1>
+        <p class="title__text">Most calendars are designed for teams. Slate is designed for freelancers</p>
         <button>Try For Free</button>
     </header>
     <main>
-        <section>
-            <h2>Features</h2>
-            <p>Most calendars are designed for teams.<br> Slate is designed for freelancers</p>
-            <figure>
-                <img src="img/circle.png" alt="circleAndRect">
+        <section class="features">
+            <h2 class="features__title">Features</h2>
+            <p class="features__undertitle">Most calendars are designed for teams.<br> Slate is designed for freelancers</p>
+            <div class="features__varaible">
+                <img src="img/circle.svg" alt="circleAndRect">
                 <h4>OpenType features<br>Variable fonts</h4>
                 <p>Slate helps you see how many more days you need nto work to reach your financial goal.</p>
-            </figure>
-            <figure>
-                <img src="img/draw.png" alt="draw">
+            </div>
+            <div class="features__design">
+                <img src="img/draw.svg" alt="draw">
                 <h4>Design with real data</h4>
                 <p>Slate helps you see how many more days you need to work to reach your financial goal.</p>
-            </figure>
-            <figure>
-                <img src="img/pnsel.png" alt="pensel">
+            </div>
+            <div class="features__fastestway">
+                <img src="img/pnsel.svg" alt="pensel">
                 <h4>Fastest way to take action</h4>
                 <p>Slate helps you see how many more days you need to work to reach your financial goal.</p>
-            </figure>
-            <video src="video/ducks.mp4" width="400" height="300" controls></video>
+            </div>
+            <img src="img/videoscrean.png" alt="videoscrean" class="features__videoimg">
         </section>
-        <section>
-            <h2>Fastest way to organize</h2>
-            <p>Most calendars are designed for teams.<br>Slate is designed for freelancers</p>
+        <section class="organize">
+            <h2 class="organize__title">Fastest way to organize</h2>
+            <p class="organize__undertitle">Most calendars are designed for teams.<br>Slate is designed for freelancers</p>
             <button type="submit">Try For Free</button>
             <img src="img/laptop.jpg" alt="laptop" width="200" height="100">
         </section>
-        <section>
+        <section class="fingertips">
             <h5>At your fingertips</h5>
             <h2>Lighting fast prototyping</h2>
             <p><b>Subscribe to our Newsletter</b><br>Available exclusivery on Fignaland</p>
             <img src="img/screencontent.png" alt="screencontent">
-            <label>
+            <div class="fingertrips__lable">
                 <input type="text" name="Email" placeholder="Your Email">
                 <button type="submit">Subscribe</button>
-            </label>    
+            </div>   
         </section>
         <section>
             <h2>Partners</h2>
