add more classes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Figma landing</title>
     <link rel="shortcut icon" href="https://placekitten.com/96/139" type="image/x-icon">
 </head>
 
@@ -29,12 +29,12 @@
         </div>
         <h1 class="title">The best products start with Figma</h1>
         <p class="title__text">Most calendars are designed for teams. Slate is designed for freelancers</p>
-        <button>Try For Free</button>
+        <button class="try">Try For Free</button>
     </header>
     <main>
         <section class="features">
             <h2 class="features__title">Features</h2>
-            <p class="features__undertitle">Most calendars are designed for teams.<br> Slate is designed for freelancers</p>
+            <p class="features__undertitle">Most calendars are designed for teams. Slate is designed for freelancers</p>
             <div class="features__varaible">
                 <img src="img/circle.svg" alt="circleAndRect">
                 <h4>OpenType features<br>Variable fonts</h4>
@@ -60,43 +60,45 @@
         </section>
         <section class="fingertips">
             <h5>At your fingertips</h5>
-            <h2>Lighting fast prototyping</h2>
-            <p><b>Subscribe to our Newsletter</b><br>Available exclusivery on Fignaland</p>
+            <h2 class="fing__title">Lighting fast prototyping</h2>
+            <p><b>Subscribe to our Newsletter</b>Available exclusivery on Fignaland</p>
             <img src="img/screencontent.png" alt="screencontent">
             <div class="fingertrips__lable">
                 <input type="text" name="Email" placeholder="Your Email">
                 <button type="submit">Subscribe</button>
             </div>   
         </section>
-        <section>
-            <h2>Partners</h2>
-            <p>Most calendars are designed for teams.<br>Slate is designed for freelancers</p>
-            <a href="#"><img src="img/partneramazon.png" alt="partneramazon"></a>
-            <a href="#"><img src="img/partnerGoogle.png" alt="partnerGoogle"></a>
-            <a href="#"><img src="img/partnerMicrosoft.png" alt="partnerMicrosoft"></a>
-            <a href="#"><img src="img/partnerUber.png" alt="partnerUber"></a>
-            <a href="#"><img src="img/prtnerDropbox.png" alt="partnerDropbox"></a>
-            <a href="#"><img src="img/partneramazon.png" alt="partneramazon"></a>
-            <a href="#"><img src="img/partnerGoogle.png" alt="partnerGoogle"></a>
-            <a href="#"><img src="img/partnerMicrosoft.png" alt="partnerMicrosoft"></a>
-            <a href="#"><img src="img/partnerUber.png" alt="partnerUber"></a>
-            <a href="#"><img src="img/prtnerDropbox.png" alt="partnerDropbox"></a>
+        <section class="partners">
+            <h2 class="partners__title">Partners</h2>
+            <p class="partners__undertitle">Most calendars are designed for teams. Slate is designed for freelancers</p>
+            <div class="partners__icons">
+                <a href="#"><img src="img/partneramazon.png" alt="partner-Amazon"></a>
+                <a href="#"><img src="img/partnergoogle.png" alt="partner-Google"></a>
+                <a href="#"><img src="img/partnermicrosoft.png" alt="partner-Microsoft"></a>
+                <a href="#"><img src="img/partneruber.png" alt="partner-Uber"></a>
+                <a href="#"><img src="img/prtnerdropbox.png" alt="partner-Dropbox"></a>
+                <a href="#"><img src="img/partneramazon.png" alt="partner-Amazon"></a>
+                <a href="#"><img src="img/partnergoogle.png" alt="partner-Google"></a>
+                <a href="#"><img src="img/partnermicrosoft.png" alt="partner-Microsoft"></a>
+                <a href="#"><img src="img/partneruber.png" alt="partner-Uber"></a>
+                <a href="#"><img src="img/prtnerdropbox.png" alt="partner-Dropbox"></a>
+            </div>
             <button>Try For Free</button>
         </section>
-        <section>
-            <h2>Testimonials</h2>
-            <p>Most calendars are designed for teams.Slate is designed for freelancers<br> who want a simple way to plan
+        <section class="testimonials">
+            <h2 class="testimonials__title">Testimonials</h2>
+            <p class="testimonials__undertitle">Most calendars are designed for teams.Slate is designed for freelancers<br> who want a simple way to plan
                 their schelude.</p>
-            <figure>
-                <img src="img/ibm.png" alt="ibm">
+            <figure class="testimonials__ibm ibm">
+                <img class="ibm__img" src="img/ibm.png" alt="ibm">
                 <button>More Testimonials</button>
             </figure>
         </section>
-        <section>
-            <h2>Prising</h2>
-            <p>Most calendars are designed for teams.<br>Slate is designed for freelancers</p>
-            <figure>
-                <h4>Free</h4>
+        <section class="prising">
+            <h2 class="prising__title">Prising</h2>
+            <p class="prising__undertitle">Most calendars are designed for teams.<br>Slate is designed for freelancers</p>
+            <div class="prising__blocks">
+                <h4 class="prising__blocks-title">Free</h4>
                 <p>organize across all apps by hand</p>
                 <h3>0$</h3>
                 <p>Per Month</p>
@@ -106,9 +108,9 @@
                 <a href="#"><p>Prising feature</p></a>
                 <a href="#"><p>Prising feature</p></a>
                 <button>Order now</button>
-            </figure>
-            <figure>
-                <h4>Standart</h4>
+            </div>
+            <div class="prising__blocks">
+                <h4 class="prising__blocks-title">Standart</h4>
                 <p>organize across all apps by hand</p>
                 <h3>10$</h3>
                 <p>Per Month</p>
@@ -118,9 +120,9 @@
                 <a href="#"><p>Prising feature</p></a>
                 <a href="#"><p>Prising feature</p></a>
                 <button>Order now</button>
-            </figure>
-            <figure>
-                <h4>Business</h4>
+            </div>
+            <div class="prising__blocks">
+                <h4 class="prising__blocks-title">Business</h4>
                 <p>organize across all apps by hand</p>
                 <h3>99$</h3>
                 <p>Per Month</p>
@@ -130,13 +132,13 @@
                 <a href="#"><p>Prising feature</p></a>
                 <a href="#"><p>Prising feature</p></a>
                 <button>Order now</button>
-            </figure>
+            </div>
         </section>
-        <section>
-            <h2>Contact Us</h2>
+        <section class="contactus">
+            <h2 class="contactus__title">Contact Us</h2>
             <p>Most calendars are designed for teams.<br>Slate is designed for freelancers</p>
             <h4>Contact Us</h4>
-            <form method="post">
+            <form class="athorize" method="post">
                 <input type="text" placeholder="Your Name"><br>
                 <input type="text" placeholder="Your Email"><br>
                 <input type="text" placeholder="Your Messege"><br>
