add fieldset into section contactus

--- a/index.html
+++ b/index.html
@@ -138,13 +138,15 @@
             <h2 class="contactus__title">Contact Us</h2>
             <p>Most calendars are designed for teams.<br>Slate is designed for freelancers</p>
             <h4>Contact Us</h4>
-            <form class="athorize" method="post">
-                <input type="text" placeholder="Your Name"><br>
-                <input type="text" placeholder="Your Email"><br>
-                <input type="text" placeholder="Your Messege"><br>
-                <button>Send</button>
-            </form>
-            <img src="img/mapscreen.png" alt="mapscreen">
+            <fieldset>
+                <form class="athorize" method="post">
+                    <input type="text" placeholder="Your Name"><br>
+                    <input type="text" placeholder="Your Email"><br>
+                    <input type="text" placeholder="Your Messege"><br>
+                    <button>Send</button>
+                </form>
+            </fieldset>
+                <img src="img/mapscreen.png" alt="mapscreen">
         </section>
     </main>
     <footer>
