add script , add header into header partial

--- a/index.html
+++ b/index.html
@@ -11,27 +11,7 @@
 </head>
 
 <body>
-    <header>
-
-        <nav>
-            <img src="img/figma-logo.png" alt="figma-logo" class="logo" width="80" height="50">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Product</a></li>
-                <li><a href="#">Prising</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contacts</a></li>
-            </ul>
-        </nav>
-        <div class="icons"><a href="#">
-            <img class="twiticon" src="img/twitweswg.svg" alt="twitericon" width="23" height="23"></a>
-            <a href="#"><img class="instagramicon" src="img/instagramsvg.svg" alt="instagram" width="30" height="30"></a>
-            <a href="#"><img class="facebookicon" src="img/facbooksvg.svg" alt="facebookicon" width="30" height="30"></a>
-        </div>
-        <h1 class="title">The best products start with Figma</h1>
-        <p class="title__text">Most calendars are designed for teams. Slate is designed for freelancers</p>
-        <button class="try">Try For Free</button>
-    </header>
+    <header data-include="header.partial.html"></header>
     <main>
         <section class="features">
             <h2 class="features__title">Features</h2>
@@ -55,7 +35,8 @@
         </section>
         <section class="organize">
             <h2 class="organize__title">Fastest way to organize</h2>
-            <p class="organize__undertitle">Most calendars are designed for teams.<br>Slate is designed for freelancers</p>
+            <p class="organize__undertitle">Most calendars are designed for teams.<br>Slate is designed for freelancers
+            </p>
             <button type="submit">Try For Free</button>
             <img src="img/laptop.jpg" alt="laptop" width="200" height="100">
         </section>
@@ -67,7 +48,7 @@
             <div class="fingertrips__lable">
                 <input type="text" name="Email" placeholder="Your Email">
                 <button type="submit">Subscribe</button>
-            </div>   
+            </div>
         </section>
         <section class="partners">
             <h2 class="partners__title">Partners</h2>
@@ -88,7 +69,8 @@
         </section>
         <section class="testimonials">
             <h2 class="testimonials__title">Testimonials</h2>
-            <p class="testimonials__undertitle">Most calendars are designed for teams.Slate is designed for freelancers<br> who want a simple way to plan
+            <p class="testimonials__undertitle">Most calendars are designed for teams.Slate is designed for
+                freelancers<br> who want a simple way to plan
                 their schelude.</p>
             <figure class="testimonials__ibm ibm">
                 <img class="ibm__img" src="img/ibm.png" alt="ibm">
@@ -97,17 +79,28 @@
         </section>
         <section class="prising">
             <h2 class="prising__title">Prising</h2>
-            <p class="prising__undertitle">Most calendars are designed for teams.<br>Slate is designed for freelancers</p>
+            <p class="prising__undertitle">Most calendars are designed for teams.<br>Slate is designed for freelancers
+            </p>
             <div class="prising__blocks">
                 <h4 class="prising__blocks-title">Free</h4>
                 <p>organize across all apps by hand</p>
                 <h3>0$</h3>
                 <p>Per Month</p>
-                <a href="#"><p>Prising feature</p></a>
-                <a href="#"><p>Prising feature</p></a>
-                <a href="#"><p>Prising feature</p></a>
-                <a href="#"><p>Prising feature</p></a>
-                <a href="#"><p>Prising feature</p></a>
+                <a href="#">
+                    <p>Prising feature</p>
+                </a>
+                <a href="#">
+                    <p>Prising feature</p>
+                </a>
+                <a href="#">
+                    <p>Prising feature</p>
+                </a>
+                <a href="#">
+                    <p>Prising feature</p>
+                </a>
+                <a href="#">
+                    <p>Prising feature</p>
+                </a>
                 <button>Order now</button>
             </div>
             <div class="prising__blocks">
@@ -115,11 +108,21 @@
                 <p>organize across all apps by hand</p>
                 <h3>10$</h3>
                 <p>Per Month</p>
-                <a href="#"><p>Prising feature</p></a>
-                <a href="#"><p>Prising feature</p></a>
-                <a href="#"><p>Prising feature</p></a>
-                <a href="#"><p>Prising feature</p></a>
-                <a href="#"><p>Prising feature</p></a>
+                <a href="#">
+                    <p>Prising feature</p>
+                </a>
+                <a href="#">
+                    <p>Prising feature</p>
+                </a>
+                <a href="#">
+                    <p>Prising feature</p>
+                </a>
+                <a href="#">
+                    <p>Prising feature</p>
+                </a>
+                <a href="#">
+                    <p>Prising feature</p>
+                </a>
                 <button>Order now</button>
             </div>
             <div class="prising__blocks">
@@ -127,11 +130,21 @@
                 <p>organize across all apps by hand</p>
                 <h3>99$</h3>
                 <p>Per Month</p>
-                <a href="#"><p>Prising feature</p></a>
-                <a href="#"><p>Prising feature</p></a>
-                <a href="#"><p>Prising feature</p></a>
-                <a href="#"><p>Prising feature</p></a>
-                <a href="#"><p>Prising feature</p></a>
+                <a href="#">
+                    <p>Prising feature</p>
+                </a>
+                <a href="#">
+                    <p>Prising feature</p>
+                </a>
+                <a href="#">
+                    <p>Prising feature</p>
+                </a>
+                <a href="#">
+                    <p>Prising feature</p>
+                </a>
+                <a href="#">
+                    <p>Prising feature</p>
+                </a>
                 <button>Order now</button>
             </div>
         </section>
@@ -147,7 +160,7 @@
                     <button>Send</button>
                 </form>
             </fieldset>
-                <img src="img/mapscreen.png" alt="mapscreen">
+            <img src="img/mapscreen.png" alt="mapscreen">
         </section>
     </main>
     <footer>
@@ -164,6 +177,7 @@
         <p>7480 Mockingbird Hill undefined</p>
         <p>(239) 555-0108</p>
     </footer>
+    <script src="js/html.data-include.js"></script>
 </body>
 
 </html>
