add some css in header

--- a/header.partial.html
+++ b/header.partial.html
@@ -1,6 +1,6 @@
-<header>
+<header class="header">
+    <img src="img/logo.svg" alt="figma-logo" class="figma-logo">
     <nav>
-        <img src="img/figma-logo.png" alt="figma-logo" class="logo" width="80" height="50">
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Product</a></li>
