rename js script

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <p>7480 Mockingbird Hill undefined</p>
         <p>(239) 555-0108</p>
     </footer>
-    <script src="js/html.data-include.js"></script>
+    <script src="js/html-data-include.js"></script>
 </body>
 
 </html>
