--- a/index.html
+++ b/index.html
@@ -11,7 +11,26 @@
 </head>
 
 <body>
-    <header data-include="header.partial.html"></header>
+    <header class="header">
+        <img src="img/logo.svg" alt="figma-logo" class="figma-logo">
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Product</a></li>
+                <li><a href="#">Prising</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contacts</a></li>
+            </ul>
+        </nav>
+        <div class="icons"><a href="#">
+            <img class="twiticon" src="img/twitweswg.svg" alt="twitericon" width="23" height="23"></a>
+            <a href="#"><img class="instagramicon" src="img/instagramsvg.svg" alt="instagram" width="30" height="30"></a>
+            <a href="#"><img class="facebookicon" src="img/facbooksvg.svg" alt="facebookicon" width="30" height="30"></a>
+        </div>
+        <h1 class="title">The best products start with Figma</h1>
+        <p class="title__text">Most calendars are designed for teams. Slate is designed for freelancers</p>
+        <button class="try">Try For Free</button>
+    </header>
     <main>
         <section class="features">
             <h2 class="features__title">Features</h2>
@@ -177,7 +196,6 @@
         <p>7480 Mockingbird Hill undefined</p>
         <p>(239) 555-0108</p>
     </footer>
-    <script src="js/html-data-include.js"></script>
 </body>
 
 </html>
