change bg otions

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <img src="img/logo.svg" alt="figma-logo" class="figma-logo">
-        <nav>
+        <nav class="nav">
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Product</a></li>
