add script and folder js with index.js and header-title.js

--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
         <p>7480 Mockingbird Hill undefined</p>
         <p>(239) 555-0108</p>
     </footer>
+    <script type="module" src="js/index.js"></script>
 </body>
 
 </html>
